# dARM_ros2

./: CMakeLists.txt  Copy-Project.ps1  README.md  dependencies.repos  package.xml
.github/workflows/: build.yml
bringup/: darm.sh  gazebo.sh  robot.sh  sim.sh
config/: controllers.yaml  poses.yaml  ros2_control_controllers.yaml
description/: darm.joints  darm.links  darm.trans  darm.urdf.xacro  materials.xacro  ros2_control.xacro  trans.xacro
docker/: Dockerfile  compose.robot.yml  compose.sim.yml
launch/: darm.launch.py  darm_odrive_sim.launch.py  gazebo.launch.py  robot.launch.py  sim.launch.py
meshes/: base_link.dae  base_link.stl  differential.dae  differential.stl  dock.stl  finger_1.dae  finger_1.stl  finger_2.dae  finger_2.stl  forearm.dae  forearm.stl  gripper.dae  gripper.stl  joint_1.stl  joint_2.stl  joint_3.stl  link_1.dae  link_1.stl  link_2.dae  link_2.stl  link_3.dae  link_3.stl
rviz/: darm.rviz
scripts/: mock_odrive.py  set_initial_joint_states.py  teleop_ps5.py
urdf/: darm.trans  darm.urdf.xacro  gazebo.xacro  materials.xacro
worlds/: asdf.config  basic.sdf
