<?xml version="1.0"?>
<package format="3">
  <name>darm_ros2</name>
  <version>0.1.0</version>
  <description>Robot description for dARM</description>
  <maintainer email="darr.jesse@gmail.com">Jesse Darr</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/.." />
  </export>
</package>
